tests/compiler/resolveNodeModules0/index.ts
import { A } from 'a';

let a: A = '42';
//~^ ERROR:  Type 'string' is not assignable to type 'number'.